fix comment content overflow

--- a/styles/markdown.css
+++ b/styles/markdown.css
@@ -2,3 +2,8 @@
   background-color: transparent;
   padding: 0;
 }
+
+/* avoid latex overflow */
+.prose p {
+  overflow: scroll;
+}
